header is now fixed when it is collapsed: more responsive work with header

--- a/public/src/app/app.component.css
+++ b/public/src/app/app.component.css
@@ -4,8 +4,10 @@
 
 @media only screen and (max-width:991px){
     .container{
+        padding-top: 100px;
         max-width: 900px;
         margin: 0;
-        padding: 10px 30px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
 }
